# Serenity

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
azaka-maid/: __init__.py  bot.py  embedder.py  main.py
future gospel/: __init__.py  bot.py  tracemoe.py
