[tool.poetry]
name = "Serenity"
version = "0.3.0"
description = "An example and documentation bot for Azaka on discord made with hata discord API Wrapper."
authors = ["mooncell07 <mooncell07@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
hata = "^1.1.106"
python-dotenv = "^0.19.0"
"azaka" = {git = "https://github.com/mooncell07/Azaka.git"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
