[tool.poetry]
name = "Serenity"
version = "0.3.0"
description = "An Azaka-discord integration demo. bot. Currently in planning."
authors = ["mooncell07 <mooncell07@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
"azaka" = {git = "https://github.com/mooncell07/Azaka.git"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
