[tool.poetry]
name = "Serenity"
version = "0.3.0"
description = "An Azaka-discord integration demo bot."
authors = ["mooncell07 <mooncell07@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
azaka = "^0.2.0"
discord = "^1.7.3"
jishaku = "^2.3.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
